--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+#components-layout-demo-custom-trigger .trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+  
+  #components-layout-demo-custom-trigger .trigger:hover {
+    color: #4834d4;
+  }
+  
+  #components-layout-demo-custom-trigger .logo {
+    height: 32px;
+    margin: 16px;
+    background: rgba(255, 255, 255, 0.3);
+  }
+  
+  .site-layout .site-layout-background {
+    background: #fff;
+  }
+
+  .site-layout-sub-header-background {
+    background: #4834d4;
+  }
+  
+  .site-layout-background {
+    background: #fff;
+  }
+
+  #main-content{
+      height: "100vh";
+  }
+
+  .ant-layout-sider-light .ant-layout-sider-trigger {
+    color: #fff;
+    background: #4834d4;
+}
