--- a/src/App.css
+++ b/src/App.css
@@ -100,14 +100,18 @@
   padding: 5px;
 } */
 
-.procurement-applet-container{
+.procurement-applet-container .ant-card-body{
+  max-height: 600px;
   height: 70vh;
   padding-bottom: 20px;
   overflow: hidden;
 }
 
 .list-purchase-request-applet-container{
-  height: 95vh;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
+}
+.list-purchase-request-applet-container .ant-card-body{
+  height: 90vh;
+  max-height: 900px;
   overflow: hidden;
 }
