--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -19,7 +19,7 @@ body{
 @media only screen and (max-width: 768px) {
     #container{
         width: 100%;
-        height: 100vh;
+        /* height: 100vh; */
     }
 
 }
