--- a/src/Pages/PurchaseRequest/style.less
+++ b/src/Pages/PurchaseRequest/style.less
@@ -1,15 +1,13 @@
 #pr-table{
     width: 100%;
     tr td{
-        padding: 5pt;
-        border: 1px solid black;
+        padding: 8pt;
+        border: 1px solid rgba(0, 0, 0, 0.25);
     }
 }
 
 #pr-container{
-    // width: 12in;
     margin-right: auto;
     margin-left: auto;
     overflow: auto;
-    // font-size: 12pt;
 }
