update pr form ui

--- a/src/Pages/PurchaseRequest/style.less
+++ b/src/Pages/PurchaseRequest/style.less
@@ -11,3 +11,23 @@
     margin-left: auto;
     overflow: auto;
 }
+.pr-items-row{
+    padding-top: 20px;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(0, 0, 0, 0.25);
+    border-bottom-style: dashed;
+    // padding-right: 7px;
+}
+.pr-items-row:hover{
+    background-color: rgba(0, 0, 0, 0.05);;
+}
+.pr-items-header{
+    border-bottom-width: 1px;
+    border-bottom-color: black;
+    padding-bottom: 10px;
+}
+.pr-items-footer{
+    border-top-width: 1px;
+    border-top-color: black;
+    padding-top: 10px;
+}
