--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,9 @@
   position: relative;
   top: -0.30em;
 }
+.ant-menu-item:hover{
+  background-color: rgba(0, 0, 0, 0.1);
+}
 .ant-dropdown-trigger .anticon{
   position: relative;
   top: -0.1em;
@@ -113,6 +116,16 @@
 .form-upload-selected-files{
   padding-top: 4px !important;
   padding-bottom: 4px !important;
+}
+.notificaton-items:hover{
+  /* background-color: rgba(0, 0, 0, 0.1); */
+  z-index: 10000000 !important;
+}
+.notificaton-items{
+  width: 350px;
+  background-color: white;
+  padding: 20px !important;
+  z-index: 10000000 !important;
 }
 
 
