change dark and yellow

--- a/src/themes/dark-theme.less
+++ b/src/themes/dark-theme.less
@@ -7,3 +7,7 @@
 @mainColorFont: #fff;
 @primary-color: @mainColor;
 @link-color: @mainColor;
+
+.ant-menu-item-selected{
+    color: @mainColorFont;
+}
