--- a/src/themes/yellow-theme.less
+++ b/src/themes/yellow-theme.less
@@ -1,8 +1,8 @@
 
 @import '../App.less';
 
-@mainColor: #f5cd79;
-@mainColorSecond: #f7d794;
+@mainColor: #d35400;
+@mainColorSecond: #e67e22;
 @hoverColor: rgba(0, 0, 0, 0.1);
 @selectColor: #f8faec;
 @mainColorFont: #fff;
