update table filter color

--- a/src/App.less
+++ b/src/App.less
@@ -12,6 +12,7 @@
 @mainColorFont: #fff;
 @primary-color: @mainColor;
 @link-color: @mainColor;
+@tableFilteredColor: #1890ff;
 
 
 body{
@@ -226,4 +227,8 @@ body{
     background-color: whitesmoke;
     box-shadow: 1px 1px 18px #888888;
     padding: 50px
+}
+
+.table-active-filter{
+    color: @tableFilteredColor;
 }
