--- a/src/themes/dark-theme.less
+++ b/src/themes/dark-theme.less
@@ -7,7 +7,9 @@
 @mainColorFont: #fff;
 @primary-color: @mainColor;
 @link-color: @mainColor;
+@tableFilteredColor: #141e29;
 
 .ant-menu-item-selected{
     color: @mainColorFont;
 }
+
