add clear filters on table

--- a/src/App.less
+++ b/src/App.less
@@ -70,6 +70,13 @@ body{
     }
 }
 
+.ant-message-custom-content{
+    .anticon{
+        position: relative;
+        top: -0.2em;
+    }
+}
+
 .header-items{
     position: relative;
     top: -10px;
