update table ui

--- a/src/App.less
+++ b/src/App.less
@@ -160,9 +160,11 @@ body{
 }
 
 .notificaton-items{
-    padding: 20px !important;
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
     &:hover{
         background-color: @hoverColor;
+        cursor: pointer;
     }
 }
 
