show inventory ris

--- a/src/Pages/RequisitionIssue/style.less
+++ b/src/Pages/RequisitionIssue/style.less
@@ -31,3 +31,7 @@
     border-top-color: black;
     padding-top: 10px;
 }
+
+.inventory-items:hover{
+    background-color: rgba(0, 0, 0, 0.05);;
+}
