add inventory and ris issue item

--- a/src/App.less
+++ b/src/App.less
@@ -77,6 +77,13 @@ body{
     }
 }
 
+.ant-tag{
+    .anticon{
+        position: relative;
+        top: -0.2em;
+    }
+}
+
 .header-items{
     position: relative;
     top: -10px;
