add notification feature

--- a/src/App.less
+++ b/src/App.less
@@ -175,6 +175,35 @@ body{
     }
 }
 
+.notificaton-items-unread{
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    background-color: @selectColor;
+    &:hover{
+        background-color: @hoverColor;
+        cursor: pointer;
+    }
+}
+
+.notificaton-items-read{
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    &:hover{
+        background-color: @hoverColor;
+        cursor: pointer;
+    }
+}
+
+.notificaton-items-warning{
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    background-color: @warning-color;
+    &:hover{
+        background-color: @hoverColor;
+        cursor: pointer;
+    }
+}
+
 #notifications-container{
     width: 350px !important;
     background-color: white;
